--- a/ChirperApp/index.html
+++ b/ChirperApp/index.html
@@ -6,9 +6,15 @@
 </head>
 <body><div class="form-inline">
     <i>Name:</i><input placeholder="Find Person..." class="form-control" id="inputName" />
-    <i>Tweet:</i><input placeholder="Tweet..." class="form-control" id="inputTweet" />
-    <button class="btn btn-primary" onclick="addContact()">Submit</button>
-</div>
+    <!--  <i>Tweet:</i><input placeholder="Tweet..." class="form-control" id="inputTweet" /> -->
+
+       <button class="btn btn-primary" onclick="addFriend()">Submit</button>
+</div> 
+   <div class="form-inline">
+        <button class="btn btn-primary" onclick="tweeterBox()">Send Tweets!</button>
+       
+       
+    </div> 
 <!--<table class="table table-bordered">
     <thead>
         <tr>
@@ -21,7 +27,24 @@
     </thead>
     <tbody id="DisplayContactsHere"></tbody>
 </table>
-    -->
+    --><div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Crank That Tweet!</h4>
+            </div>
+            <div class="modal-body">
+                <i>Your Name:</i><input placeholder="Name..." class="form-control" id="tweetersName" />
+                <i>Your Tweet:</i><input placeholder="SaywhatchuwannaSay..." class="form-control" id="inputTweet" />
+            </div>
+            <div class="modal-footer">
+                Click outside of this box to make it go away
+                <span id="SendTweetButton"></span>
+            </div>
+        </div>
+    </div>
+</div>
     <script src="JavaScript1.js"></script>
     <script src="Scripts/jquery-2.1.3.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
