--- a/ChirperApp/index.html
+++ b/ChirperApp/index.html
@@ -35,7 +35,7 @@
                 <h4 class="modal-title" id="myModalLabel">Crank That Tweet!</h4>
             </div>
             <div class="modal-body">
-                <i>Your Name:</i><input placeholder="Name..." class="form-control" id="tweetersName" />
+              <!--  <i>Your Name:</i><input placeholder="Name..." class="form-control" id="tweetersName" /> -->
                 <i>Your Tweet:</i><input placeholder="SaywhatchuwannaSay..." class="form-control" id="inputTweet" />
             </div>
             <div class="modal-footer">
